# urban-spork

./: .editorconfig  .gitignore  README.md  pom.xml
.github/workflows/: coverage.yml  release-test.yml  release.yml
urban-spork-client/: client-assembly.xml  pom.xml
urban-spork-client-gui/: client-assembly.xml  client-linux-assembly.xml  client-win-assembly.xml  pom.xml
urban-spork-client-gui/resource/: application.properties  console.css  language_en.properties  logback.xml  startup.cmd  startup.sh
urban-spork-client-gui/src/: module-info.java
urban-spork-client/resource/: client.css  client.fxml  console.css  logback.xml
urban-spork-client/src/: module-info.java
urban-spork-common/: pom.xml
urban-spork-common/src/: module-info.java
urban-spork-common/test/: logback.xml
urban-spork-jni/: Cargo.toml  pom.xml
urban-spork-jni/src/: chacha8poly1305.rs  ciphers.rs  module-info.java  xchacha20poly1305.rs  xchacha8poly1305.rs
urban-spork-jni/src/com/urbanspork/jni/: AeadCipher.java  CipherLoader.java
urban-spork-jni/src/com/urbanspork/jni/chacha8poly1305/: Cipher.java
urban-spork-jni/src/com/urbanspork/jni/xchacha20poly1305/: Cipher.java
urban-spork-jni/src/com/urbanspork/jni/xchacha8poly1305/: Cipher.java
urban-spork-server/: pom.xml  server-assembly.xml
urban-spork-server/resource/: logback.xml  startup.cmd  startup.sh
urban-spork-server/src/: module-info.java
urban-spork-test/: pom.xml
urban-spork-test/resource/: localhost.crt  localhost.key  logback-test.xml
urban-spork-test/test/: logback.xml
(+729 files in other folders)
