[package]
name = "urban-spork-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xchacha20poly1305"
crate-type = ["cdylib"]
path = "src/xchacha20poly1305.rs"

[dependencies]
jni = "0.21.1"
chacha20poly1305 = "0.10.1"