[package]
name = "urban-spork-jni"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ciphers"
crate-type = ["cdylib"]
path = "src/ciphers.rs"

[dependencies]
jni = "0.21.1"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }